<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="visitorEntity"
            type="com.cloudminds.register.repository.network.bean.Visitor" />
    </data>

    <com.cloudminds.register.ui.view.WindowInsetLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="?actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="178dp"
                android:layout_marginStart="178dp"
                android:orientation="vertical"
                android:paddingTop="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/config_each_item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/star"
                        android:gravity="center"
                        android:text="@string/visitor_user_name" />

                    <com.cloudminds.register.ui.view.CustomTextInputLayout
                        android:id="@+id/visitor_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="4">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/config_text_input_height"
                            android:background="@drawable/input_rectangle_background"
                            android:singleLine="true" />

                    </com.cloudminds.register.ui.view.CustomTextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/config_each_item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/star"
                        android:gravity="center"
                        android:text="@string/visitor_phone" />

                    <com.cloudminds.register.ui.view.CustomTextInputLayout
                        android:id="@+id/visitor_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="4">

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/config_text_input_height"
                            android:background="@drawable/input_rectangle_background"
                            android:singleLine="true"
                            android:inputType="phone"
                            tools:ignore="LabelFor" />

                    </com.cloudminds.register.ui.view.CustomTextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/config_each_item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/star"
                        android:gravity="center"
                        android:text="@string/visitor_interviewer" />

                    <com.cloudminds.register.ui.view.CustomTextInputLayout
                        android:id="@+id/visitor_interviewer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="4">

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/config_text_input_height"
                            android:background="@drawable/input_rectangle_background"
                            android:singleLine="true"
                            tools:ignore="LabelFor" />

                    </com.cloudminds.register.ui.view.CustomTextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_visitor_purpose"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/config_each_item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/star"
                        android:gravity="center"
                        android:text="@string/visitor_purpose" />

                    <Spinner
                        android:id="@+id/spinner_visitor_purpose"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/config_text_input_height"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="4"
                        android:background="@drawable/input_rectangle_background" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/config_each_item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/visitor_company" />

                    <com.cloudminds.register.ui.view.CustomTextInputLayout
                        android:id="@+id/visitor_company"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="4">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/config_text_input_height"
                            android:background="@drawable/input_rectangle_background"
                            android:singleLine="true" />

                    </com.cloudminds.register.ui.view.CustomTextInputLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </com.cloudminds.register.ui.view.WindowInsetLinearLayout>
</layout>