<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="employeeViewModel"
            type="com.cloudminds.register.ui.fragment.employee.EmployeeViewModel" />
    </data>

    <com.cloudminds.register.ui.view.WindowInsetLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="178dp"
                android:layout_marginStart="178dp"
                android:orientation="vertical"
                android:paddingTop="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/config_each_item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/star"
                        android:gravity="center"
                        android:text="@string/employee_user_name" />

                    <com.cloudminds.register.ui.view.CustomTextInputLayout
                        android:id="@+id/employee_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="4">

                        <com.cloudminds.register.ui.view.CustomAutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/config_text_input_height"
                            android:background="@drawable/input_rectangle_background"
                            android:singleLine="true"
                            tools:ignore="LabelFor" />
                    </com.cloudminds.register.ui.view.CustomTextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/config_each_item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_ename"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/employee_ename" />

                    <com.cloudminds.register.ui.view.CustomTextInputLayout
                        android:id="@+id/employee_ename"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="4">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/config_text_input_height"
                            android:background="@drawable/input_rectangle_background"
                            android:singleLine="true" />
                    </com.cloudminds.register.ui.view.CustomTextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/config_each_item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_eid"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/employee_eid" />

                    <com.cloudminds.register.ui.view.CustomTextInputLayout
                        android:id="@+id/employee_eid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="4">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/config_text_input_height"
                            android:background="@drawable/input_rectangle_background"
                            android:inputType="number"
                            android:singleLine="true" />
                    </com.cloudminds.register.ui.view.CustomTextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_employee_department"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/config_each_item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/star"
                        android:gravity="center"
                        android:text="@string/employee_department_id" />

                    <Spinner
                        android:id="@+id/spinner_employee_department"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/config_text_input_height"
                        android:layout_weight="4"
                        android:background="@drawable/input_rectangle_background" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </com.cloudminds.register.ui.view.WindowInsetLinearLayout>
</layout>